<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Ground Truth Maker</string>
    <string name="title_activity_start">Habit Mining Ground Truth</string>
    <string name="annulla">Cancel</string>
    <string name="start_activity_title">Your Activities</string>
    <string name="main_activity_title">Started Activities</string>
    <string name="test">test</string>
    <string name="register_phone">Store device IMEI</string>
    <string name="enter">Enter</string>
    <string name="scrivi_attivita_hint">Write activity name</string>
    <string name="aggiungi">Add</string>
    <string name="avvia_attivita">Start an Activity</string>
    <string name="main_vuota">No started activity</string>
    <string name="crea">Create</string>
    <string name="refresh_btn">Refresh</string>
    <string name="imei">IMEI:</string>
    <!-- NOTIFICHE -->
    <string name="notification_status_on">Notifications on</string>
    <string name="notification_status_off">Notifications off</string>
    <!-- SWITCH -->
    <string name="alone">Alone</string>
    <string name="not_alone">Not alone</string>
    <string name="alone_dialog_msg">Confirm you are alone</string>
    <string name="not_alone_dialog_msg">Confirm you are not alone</string>
</resources>